win/raylib.h


#define LIGHTGRAY  CLITERAL(Color){ 200, 200, 200, 255 }   
#define GRAY       CLITERAL(Color){ 130, 130, 130, 255 }   
#define DARKGRAY   CLITERAL(Color){ 80, 80, 80, 255 }      
#define YELLOW     CLITERAL(Color){ 253, 249, 0, 255 }     
#define GOLD       CLITERAL(Color){ 255, 203, 0, 255 }     
#define ORANGE     CLITERAL(Color){ 255, 161, 0, 255 }     
#define PINK       CLITERAL(Color){ 255, 109, 194, 255 }   
#define RED        CLITERAL(Color){ 230, 41, 55, 255 }     
#define MAROON     CLITERAL(Color){ 190, 33, 55, 255 }     
#define GREEN      CLITERAL(Color){ 0, 228, 48, 255 }      
#define LIME       CLITERAL(Color){ 0, 158, 47, 255 }      
#define DARKGREEN  CLITERAL(Color){ 0, 117, 44, 255 }      
#define SKYBLUE    CLITERAL(Color){ 102, 191, 255, 255 }   
#define BLUE       CLITERAL(Color){ 0, 121, 241, 255 }     
#define DARKBLUE   CLITERAL(Color){ 0, 82, 172, 255 }      
#define PURPLE     CLITERAL(Color){ 200, 122, 255, 255 }   
#define VIOLET     CLITERAL(Color){ 135, 60, 190, 255 }    
#define DARKPURPLE CLITERAL(Color){ 112, 31, 126, 255 }    
#define BEIGE      CLITERAL(Color){ 211, 176, 131, 255 }   
#define BROWN      CLITERAL(Color){ 127, 106, 79, 255 }    
#define DARKBROWN  CLITERAL(Color){ 76, 63, 47, 255 }      
#define WHITE      CLITERAL(Color){ 255, 255, 255, 255 }   
#define BLACK      CLITERAL(Color){ 0, 0, 0, 255 }         
#define BLANK      CLITERAL(Color){ 0, 0, 0, 0 }           
#define MAGENTA    CLITERAL(Color){ 255, 0, 255, 255 }     
#define RAYWHITE   CLITERAL(Color){ 245, 245, 245, 255 }   
    typedef enum { false, true } bool;
typedef struct Vector2 {
    float x;
    float y;
} Vector2;
typedef struct Vector3 {
    float x;
    float y;
    float z;
} Vector3;
typedef struct Vector4 {
    float x;
    float y;
    float z;
    float w;
} Vector4;
typedef struct Matrix {
    float m0, m4, m8, m12;
    float m1, m5, m9, m13;
    float m2, m6, m10, m14;
    float m3, m7, m11, m15;
}   Matrix;
typedef struct Color {
    unsigned char r;
    unsigned char g;
    unsigned char b;
    unsigned char a;
} Color;
typedef struct Rectangle {
    float x;
    float y;
    float width;
    float height;
} Rectangle;
typedef struct Image {
    void *data;             
    int width;              
    int height;             
    int mipmaps;            
    int format;             
} Image;
typedef struct Texture2D {
    unsigned int id;        
    int width;              
    int height;             
    int mipmaps;            
    int format;             
} Texture2D;
typedef Texture2D Texture;
typedef Texture2D TextureCubemap;
typedef struct RenderTexture2D {
    unsigned int id;        
    Texture2D texture;      
    Texture2D depth;        
    bool depthTexture;      
} RenderTexture2D;
typedef RenderTexture2D RenderTexture;
typedef struct CharInfo {
    int value;              
    int offsetX;            
    int offsetY;            
    int advanceX;           
    Image image;            
} CharInfo;
typedef struct Font {
    int baseSize;           
    int charsCount;         
    Texture2D texture;      
    Rectangle *recs;        
    CharInfo *chars;        
} Font;
#define SpriteFont Font     
typedef struct Camera3D {
    Vector3 position;       
    Vector3 target;         
    Vector3 up;             
    float fovy;             
    int type;               
} Camera3D;
typedef Camera3D Camera;    
typedef struct Camera2D {
    Vector2 offset;         
    Vector2 target;         
    float rotation;         
    float zoom;             
} Camera2D;
typedef struct Ray {
    Vector3 position;       
    Vector3 direction;      
} Ray;
typedef enum {
    FLAG_RESERVED           = 1,    
    FLAG_FULLSCREEN_MODE    = 2,    
    FLAG_WINDOW_RESIZABLE   = 4,    
    FLAG_WINDOW_UNDECORATED = 8,    
    FLAG_WINDOW_TRANSPARENT = 16,   
    FLAG_WINDOW_HIDDEN      = 128,  
    FLAG_WINDOW_ALWAYS_RUN  = 256,  
    FLAG_MSAA_4X_HINT       = 32,   
    FLAG_VSYNC_HINT         = 64    
} ConfigFlag;
typedef enum {
    LOG_ALL = 0,        
    LOG_TRACE,
    LOG_DEBUG,
    LOG_INFO,
    LOG_WARNING,
    LOG_ERROR,
    LOG_FATAL,
    LOG_NONE            
} TraceLogType;
typedef enum {
    UNCOMPRESSED_GRAYSCALE = 1,     
    UNCOMPRESSED_GRAY_ALPHA,        
    UNCOMPRESSED_R5G6B5,            
    UNCOMPRESSED_R8G8B8,            
    UNCOMPRESSED_R5G5B5A1,          
    UNCOMPRESSED_R4G4B4A4,          
    UNCOMPRESSED_R8G8B8A8,          
    UNCOMPRESSED_R32,               
    UNCOMPRESSED_R32G32B32,         
    UNCOMPRESSED_R32G32B32A32,      
    COMPRESSED_DXT1_RGB,            
    COMPRESSED_DXT1_RGBA,           
    COMPRESSED_DXT3_RGBA,           
    COMPRESSED_DXT5_RGBA,           
    COMPRESSED_ETC1_RGB,            
    COMPRESSED_ETC2_RGB,            
    COMPRESSED_ETC2_EAC_RGBA,       
    COMPRESSED_PVRT_RGB,            
    COMPRESSED_PVRT_RGBA,           
    COMPRESSED_ASTC_4x4_RGBA,       
    COMPRESSED_ASTC_8x8_RGBA        
} PixelFormat;
typedef enum {
    CAMERA_CUSTOM = 0,
    CAMERA_FREE,
    CAMERA_ORBITAL,
    CAMERA_FIRST_PERSON,
    CAMERA_THIRD_PERSON
} CameraMode;
typedef enum {
    CAMERA_PERSPECTIVE = 0,
    CAMERA_ORTHOGRAPHIC
} CameraType;
typedef void (*TraceLogCallback)(int logType, const char *text, va_list args);
RLAPI void InitWindow(int width, int height, const char *title);  
RLAPI bool WindowShouldClose(void);                               
RLAPI void CloseWindow(void);                                     
RLAPI bool IsWindowReady(void);                                   
RLAPI bool IsWindowMinimized(void);                               
RLAPI bool IsWindowResized(void);                                 
RLAPI bool IsWindowHidden(void);                                  
RLAPI bool IsWindowFullscreen(void);                              
RLAPI void ToggleFullscreen(void);                                
RLAPI void UnhideWindow(void);                                    
RLAPI void HideWindow(void);                                      
RLAPI void SetWindowIcon(Image image);                            
RLAPI void SetWindowTitle(const char *title);                     
RLAPI void SetWindowPosition(int x, int y);                       
RLAPI void SetWindowMonitor(int monitor);                         
RLAPI void SetWindowMinSize(int width, int height);               
RLAPI void SetWindowSize(int width, int height);                  
RLAPI void *GetWindowHandle(void);                                
RLAPI int GetScreenWidth(void);                                   
RLAPI int GetScreenHeight(void);                                  
RLAPI int GetMonitorCount(void);                                  
RLAPI int GetMonitorWidth(int monitor);                           
RLAPI int GetMonitorHeight(int monitor);                          
RLAPI int GetMonitorPhysicalWidth(int monitor);                   
RLAPI int GetMonitorPhysicalHeight(int monitor);                  
RLAPI Vector2 GetWindowPosition(void);                            
RLAPI const char *GetMonitorName(int monitor);                    
RLAPI const char *GetClipboardText(void);                         
RLAPI void SetClipboardText(const char *text);                    
RLAPI void ShowCursor(void);                                      
RLAPI void HideCursor(void);                                      
RLAPI bool IsCursorHidden(void);                                  
RLAPI void EnableCursor(void);                                    
RLAPI void DisableCursor(void);                                   
RLAPI void ClearBackground(Color color);                          
RLAPI void BeginDrawing(void);                                    
RLAPI void EndDrawing(void);                                      
RLAPI void BeginMode2D(Camera2D camera);                          
RLAPI void EndMode2D(void);                                       
RLAPI void BeginMode3D(Camera3D camera);                          
RLAPI void EndMode3D(void);                                       
RLAPI void BeginTextureMode(RenderTexture2D target);              
RLAPI void EndTextureMode(void);                                  
RLAPI void BeginScissorMode(int x, int y, int width, int height); 
RLAPI void EndScissorMode(void);                                  
RLAPI Ray GetMouseRay(Vector2 mousePosition, Camera camera);      
RLAPI Matrix GetCameraMatrix(Camera camera);                      
RLAPI Matrix GetCameraMatrix2D(Camera2D camera);                  
RLAPI Vector2 GetWorldToScreen(Vector3 position, Camera camera);  
RLAPI Vector2 GetWorldToScreenEx(Vector3 position, Camera camera, int width, int height); 
RLAPI Vector2 GetWorldToScreen2D(Vector2 position, Camera2D camera); 
RLAPI Vector2 GetScreenToWorld2D(Vector2 position, Camera2D camera); 
RLAPI void SetTargetFPS(int fps);                                 
RLAPI int GetFPS(void);                                           
RLAPI float GetFrameTime(void);                                   
RLAPI double GetTime(void);                                       
RLAPI int ColorToInt(Color color);                                
RLAPI Vector4 ColorNormalize(Color color);                        
RLAPI Color ColorFromNormalized(Vector4 normalized);              
RLAPI Vector3 ColorToHSV(Color color);                            
RLAPI Color ColorFromHSV(Vector3 hsv);                            
RLAPI Color GetColor(int hexValue);                               
RLAPI Color Fade(Color color, float alpha);                       
RLAPI void SetConfigFlags(unsigned int flags);                    
RLAPI void SetTraceLogLevel(int logType);                         
RLAPI void SetTraceLogExit(int logType);                          
RLAPI void SetTraceLogCallback(TraceLogCallback callback);        
RLAPI void TraceLog(int logType, const char *text, ...);          
RLAPI void TakeScreenshot(const char *fileName);                  
RLAPI int GetRandomValue(int min, int max);                       
RLAPI unsigned char *LoadFileData(const char *fileName, unsigned int *bytesRead);     
RLAPI void SaveFileData(const char *fileName, void *data, unsigned int bytesToWrite); 
RLAPI char *LoadFileText(const char *fileName);                   
RLAPI void SaveFileText(const char *fileName, char *text);        
RLAPI bool FileExists(const char *fileName);                      
RLAPI bool IsFileExtension(const char *fileName, const char *ext);
RLAPI bool DirectoryExists(const char *dirPath);                  
RLAPI const char *GetExtension(const char *fileName);             
RLAPI const char *GetFileName(const char *filePath);              
RLAPI const char *GetFileNameWithoutExt(const char *filePath);    
RLAPI const char *GetDirectoryPath(const char *filePath);         
RLAPI const char *GetPrevDirectoryPath(const char *dirPath);      
RLAPI const char *GetWorkingDirectory(void);                      
RLAPI char **GetDirectoryFiles(const char *dirPath, int *count);  
RLAPI void ClearDirectoryFiles(void);                             
RLAPI bool ChangeDirectory(const char *dir);                      
RLAPI bool IsFileDropped(void);                                   
RLAPI char **GetDroppedFiles(int *count);                         
RLAPI void ClearDroppedFiles(void);                               
RLAPI long GetFileModTime(const char *fileName);                  
RLAPI unsigned char *CompressData(unsigned char *data, int dataLength, int *compDataLength);        
RLAPI unsigned char *DecompressData(unsigned char *compData, int compDataLength, int *dataLength);  
RLAPI void SaveStorageValue(unsigned int position, int value);    
RLAPI int LoadStorageValue(unsigned int position);                
RLAPI void OpenURL(const char *url);                              