module.jai

LIGHTGRAY  :: Color.{ 200, 200, 200, 255 };  // Light Gray
GRAY       :: Color.{ 130, 130, 130, 255 };  // Gray
DARKGRAY   :: Color.{ 80, 80, 80, 255 };     // Dark Gray
YELLOW     :: Color.{ 253, 249, 0, 255 };    // Yellow
GOLD       :: Color.{ 255, 203, 0, 255 };    // Gold
ORANGE     :: Color.{ 255, 161, 0, 255 };    // Orange
PINK       :: Color.{ 255, 109, 194, 255 };  // Pink
RED        :: Color.{ 230, 41, 55, 255 };    // Red
MAROON     :: Color.{ 190, 33, 55, 255 };    // Maroon
GREEN      :: Color.{ 0, 228, 48, 255 };     // Green
LIME       :: Color.{ 0, 158, 47, 255 };     // Lime
DARKGREEN  :: Color.{ 0, 117, 44, 255 };     // Dark Green
SKYBLUE    :: Color.{ 102, 191, 255, 255 };  // Sky Blue
BLUE       :: Color.{ 0, 121, 241, 255 };    // Blue
DARKBLUE   :: Color.{ 0, 82, 172, 255 };     // Dark Blue
PURPLE     :: Color.{ 200, 122, 255, 255 };  // Purple
VIOLET     :: Color.{ 135, 60, 190, 255 };   // Violet
DARKPURPLE :: Color.{ 112, 31, 126, 255 };   // Dark Purple
BEIGE      :: Color.{ 211, 176, 131, 255 };  // Beige
BROWN      :: Color.{ 127, 106, 79, 255 };   // Brown
DARKBROWN  :: Color.{ 76, 63, 47, 255 };     // Dark Brown
WHITE      :: Color.{ 255, 255, 255, 255 };  // White
BLACK      :: Color.{ 0, 0, 0, 255 };        // Black
BLANK      :: Color.{ 0, 0, 0, 0 };          // Blank (Transparent)
MAGENTA    :: Color.{ 255, 0, 255, 255 };    // Magenta
RAYWHITE   :: Color.{ 245, 245, 245, 255 };  // My own White (raylib logo)

using PixelFormat :: enum u32 {
    UNCOMPRESSED_GRAYSCALE :: 1;    // 8 bit per pixel (no alpha)
    UNCOMPRESSED_GRAY_ALPHA;        // 8*2 bpp (2 channels)
    UNCOMPRESSED_R5G6B5;            // 16 bpp
    UNCOMPRESSED_R8G8B8;            // 24 bpp
    UNCOMPRESSED_R5G5B5A1;          // 16 bpp (1 bit alpha)
    UNCOMPRESSED_R4G4B4A4;          // 16 bpp (4 bit alpha)
    UNCOMPRESSED_R8G8B8A8;          // 32 bpp
    UNCOMPRESSED_R32;               // 32 bpp (1 channel - float)
    UNCOMPRESSED_R32G32B32;         // 32*3 bpp (3 channels - float)
    UNCOMPRESSED_R32G32B32A32;      // 32*4 bpp (4 channels - float)
    COMPRESSED_DXT1_RGB;            // 4 bpp (no alpha)
    COMPRESSED_DXT1_RGBA;           // 4 bpp (1 bit alpha)
    COMPRESSED_DXT3_RGBA;           // 8 bpp
    COMPRESSED_DXT5_RGBA;           // 8 bpp
    COMPRESSED_ETC1_RGB;            // 4 bpp
    COMPRESSED_ETC2_RGB;            // 4 bpp
    COMPRESSED_ETC2_EAC_RGBA;       // 8 bpp
    COMPRESSED_PVRT_RGB;            // 4 bpp
    COMPRESSED_PVRT_RGBA;           // 4 bpp
    COMPRESSED_ASTC_4x4_RGBA;       // 8 bpp
    COMPRESSED_ASTC_8x8_RGBA;       // 2 bpp
}

using ConfigFlag :: enum u32 {
    FLAG_RESERVED           :: 1;
    FLAG_FULLSCREEN_MODE    :: 2;
    FLAG_WINDOW_RESIZABLE   :: 4;
    FLAG_WINDOW_UNDECORATED :: 8;
    FLAG_WINDOW_TRANSPARENT :: 16;
    FLAG_WINDOW_HIDDEN      :: 128;
    FLAG_WINDOW_ALWAYS_RUN  :: 256;
    FLAG_MSAA_4X_HINT       :: 32;
    FLAG_VSYNC_HINT         :: 64;
}

TraceLogType :: enum {
    LOG_ALL;
    LOG_TRACE;
    LOG_DEBUG;
    LOG_INFO;
    LOG_WARNING;
    LOG_ERROR;
    LOG_FATAL;
    LOG_NONE;
}

Color :: struct {
    r: u8;
    g: u8;
    b: u8;
    a: u8;
}

CameraType :: enum {
    CAMERA_PERSPECTIVE;
    CAMERA_ORTHOGRAPHIC;
}

CameraMode :: enum {
    CAMERA_CUSTOM;
    CAMERA_FREE;
    CAMERA_ORBITAL;
    CAMERA_FIRST_PERSON;
    CAMERA_THIRD_PERSON;
}

Camera :: Camera3D;

Camera2D :: struct {
    offset: Vector2;
    target: Vector2;
    rotation: float32;
    zoom: float32;
}

Camera3D :: struct {
    position: Vector3;
    target: Vector3;
    up: Vector3;
    fovy: float32;
    type: CameraType;
}

Image :: struct {
    data: *void;
    width: s32;
    height: s32;
    mipmaps: s32 = 1;
    format: PixelFormat;
}

Texture        :: Texture2D;
TextureCubemap :: Texture2D;

Texture2D :: struct {
    id: u32;
    width: s32;
    height: s32;
    mipmaps: s32;
    format: PixelFormat;
}

RenderTexture :: RenderTexture2D;

RenderTexture2D :: struct {
    id: u32;
    texture: Texture2D;
    depth: Texture2D;
    depthTexture: bool;
}

Ray :: struct {
    position: Vector3;
    direction: Vector3;
}

Rectangle :: struct {
    x: float32;
    y: float32;
    width: float32;
    height: float32;
}

Font :: struct {
    baseSize: s32;
    charsCount: s32;
    texture: Texture2D;
    recs: *Rectangle;
    chars: *CharInfo;
}

SpriteFont :: Font;

// Window-related functions
InitWindow               :: (width: s32, height: s32, title: *u8) #foreign raylib;
WindowShouldClose        :: () -> bool #foreign raylib;
CloseWindow              :: () #foreign raylib;
IsWindowReady            :: () -> bool #foreign raylib;
IsWindowMinimized        :: () -> bool #foreign raylib;
IsWindowResized          :: () -> bool #foreign raylib;
IsWindowHidden           :: () -> bool #foreign raylib;
IsWindowFullscreen       :: () -> bool #foreign raylib;
ToggleFullscreen         :: () #foreign raylib;
UnhideWindow             :: () #foreign raylib;
HideWindow               :: () #foreign raylib;
SetWindowIcon            :: (image: Image) #foreign raylib;
SetWindowTitle           :: (title: *u8) #foreign raylib;
SetWindowPosition        :: (x: s32, y: s32) #foreign raylib;
SetWindowMonitor         :: (monitor: s32) #foreign raylib;
SetWindowMinSize         :: (width: s32, height: s32) #foreign raylib;
SetWindowSize            :: (width: s32, height: s32) #foreign raylib;
GetWindowHandle          :: () -> *void #foreign raylib;
GetScreenWidth           :: () -> s32 #foreign raylib;
GetScreenHeight          :: () -> s32 #foreign raylib;
GetMonitorCount          :: () -> s32 #foreign raylib;
GetMonitorWidth          :: (monitor: s32) -> s32 #foreign raylib;
GetMonitorHeight         :: (monitor: s32) -> s32 #foreign raylib;
GetMonitorPhysicalWidth  :: (monitor: s32) -> s32 #foreign raylib;
GetMonitorPhysicalHeight :: (monitor: s32) -> s32 #foreign raylib;
GetWindowPosition        :: () -> Vector2 #foreign raylib;
GetMonitorName           :: (monitor: s32) -> *u8 #foreign raylib;
GetClipboardText         :: () -> *u8 #foreign raylib;
SetClipboardText         :: (text: *u8) #foreign raylib;

// Cursor-related functions
ShowCursor     :: () #foreign raylib;
HideCursor     :: () #foreign raylib;
IsCursorHidden :: () -> bool #foreign raylib;
EnableCursor   :: () #foreign raylib;
DisableCursor  :: () #foreign raylib;

// Drawing-related functions
ClearBackground  :: (color: Color) #foreign raylib;
BeginDrawing     :: () #foreign raylib;
EndDrawing       :: () #foreign raylib;
BeginMode2D      :: (camera: Camera2D) #foreign raylib;
EndMode2D        :: () #foreign raylib;
BeginMode3D      :: (camera: Camera3D) #foreign raylib;
EndMode3D        :: () #foreign raylib;
BeginTextureMode :: (target: RenderTexture2D) #foreign raylib;
EndTextureMode   :: () #foreign raylib;
BeginScissorMode :: (x: s32, y: s32, width: s32, height: s32) #foreign raylib;
EndScissorMode   :: () #foreign raylib;

GetMouseRay        :: (mousePosition: Vector2, camera: Camera) -> Ray #foreign raylib;
GetCameraMatrix    :: (camera: Camera) -> Matrix #foreign raylib;
GetCameraMatrix2D  :: (camera: Camera2D) -> Matrix #foreign raylib;
GetWorldToScreen   :: (position: Vector3, camera: Camera) -> Vector2 #foreign raylib;
GetWorldToScreenEx :: (position: Vector3, camera: Camera, width: s32, height: s32) -> Vector2 #foreign raylib;
GetWorldToScreen2D :: (position: Vector2, camera: Camera2D) -> Vector2 #foreign raylib;
GetScreenToWorld2D :: (position: Vector2, camera: Camera2D) -> Vector2 #foreign raylib;

// Timing-related functions
SetTargetFPS :: (fps: s32) #foreign raylib;
GetFPS       :: () -> s32 #foreign raylib;
GetFrameTime :: () -> float32 #foreign raylib;
GetTime      :: () -> float64 #foreign raylib;

// Color-related functions
ColorToInt          :: (color: Color) -> int #foreign raylib;
ColorNormalize      :: (color: Color) -> Vector4 #foreign raylib;
ColorFromNormalized :: (normalized: Vector4) -> Color #foreign raylib;
ColorToHSV          :: (color: Color) -> Vector3 #foreign raylib;
ColorFromHSV        :: (hsv: Vector3) -> Color #foreign raylib;
GetColor            :: (hexValue: s32) -> Color #foreign raylib;
Fade                :: (color: Color, alpha: float32) -> Color #foreign raylib;

// Misc. functions
SetConfigFlags      :: (flags: ConfigFlag) #foreign raylib;
SetTraceLogLevel    :: (logType: TraceLogType) #foreign raylib;
SetTraceLogExit     :: (logType: TraceLogType) #foreign raylib;
SetTraceLogCallback :: (callback: TraceLogType, text: *u8, varargs: *void) #foreign raylib;
TraceLog            :: (logType: TraceLogType, text: *u8, varargs: *void) #foreign raylib;
TakeScreenshot      :: (fileName: *u8) #foreign raylib;
GetRandomValue      :: (min: s32, max: s32) -> s32 #foreign raylib;

// Files management functions
LoadFileData          :: (fileName: *u8, bytesRead: *u8) -> *u8 #foreign raylib;
SaveFileData          :: (fileName: *u8, data: *void, bytesToWrite: u32) #foreign raylib;
LoadFileText          :: (fileName: *u8) -> *u8 #foreign raylib;
SaveFileText          :: (fileName: *u8, text: *u8) #foreign raylib;
FileExists            :: (fileName: *u8) -> bool #foreign raylib;
IsFileExtension       :: (fileName: *u8, ext: *u8) -> bool #foreign raylib;
DirectoryExists       :: (dirPath: *u8) -> bool #foreign raylib;
GetExtension          :: (fileName: *u8) -> *u8 #foreign raylib;
GetFileName           :: (filePath: *u8) -> *u8 #foreign raylib;
GetFileNameWithoutExt :: (filePath: *u8) -> *u8 #foreign raylib;
GetDirectoryPath      :: (filePath: *u8) -> *u8 #foreign raylib;
GetPrevDirectoryPath  :: (dirPath: *u8) -> *u8 #foreign raylib;
GetWorkingDirectory   :: () -> *u8 #foreign raylib;
GetDirectoryFiles     :: (dirPath: *u8, count: *s32) -> **u8 #foreign raylib;
ClearDirectoryFiles   :: () #foreign raylib;
ChangeDirectory       :: (dir: *u8) -> bool #foreign raylib;
IsFileDropped         :: () -> bool #foreign raylib;
GetDroppedFiles       :: (count: *s32) #foreign raylib;
ClearDroppedFiles     :: () #foreign raylib;
GetFileModTime        :: (fileName: *u8) -> float32 #foreign raylib;

CompressData   :: (data: *u8, dataLength: s32, compDataLength: *s32) -> *u8 #foreign raylib;
DecompressData :: (compData: *u8, compDataLength: s32, dataLength: *s32) -> *u8 #foreign raylib;

// Persistent storage management
SaveStorageValue :: (position: u32, value: s32) #foreign raylib;
LoadStorageValue :: (position: u32) -> s32 #foreign raylib;

OpenURL :: (url: *u8) #foreign raylib;
